# django-one

./: .editorconfig  .env  Dockerfile  docker-compose.yml  pyproject.toml
apps/profiles_api/: models.py  urls.py  views.py
apps/profiles_api/migrations/: 0001_initial.py
config/: settings.py  urls.py
